[package]
name = "sample-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
orientdb-client = "*"
uuid = { version = "^0.8", features = ["v4"]}
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"